--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Project</title>
+    <title>Gourmet Eats | Menu</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -12,27 +16,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="menu py-5">
+    <!-- Hero Section -->
+    <header class="hero-section text-center text-white d-flex align-items-center justify-content-center mb-5">
+        <div class="hero-overlay"></div>
+        <div class="container position-relative z-2">
+            <h1 class="display-3 fw-bold mb-3">Savor the Flavor</h1>
+            <p class="lead mb-4">Experience culinary excellence with our handcrafted menu.</p>
+            <a href="#menu-section" class="btn btn-primary btn-lg rounded-pill px-5 shadow-sm">View Menu</a>
+        </div>
+    </header>
+
+    <section class="menu py-5" id="menu-section">
         <div class="container">
-            <div class="title text-center mb-4">
-                <h2 class="display-4 fw-bold">Our Menu</h2>
-                <div class="underline bg-warning mx-auto"></div>
+            <div class="title text-center mb-5">
+                <h2 class="section-title">Our Creations</h2>
+                <div class="underline mx-auto"></div>
             </div>
 
             <!-- Search Bar -->
-            <div class="row justify-content-center mb-4">
+            <div class="row justify-content-center mb-5">
                 <div class="col-md-6">
-                    <div class="input-group">
-                        <span class="input-group-text bg-white border-end-0">
-                            <i class="fas fa-search text-muted"></i>
+                    <div class="search-wrapper shadow-sm rounded-pill bg-white overflow-hidden d-flex">
+                        <span class="search-icon d-flex align-items-center justify-content-center px-3 text-muted">
+                            <i class="fas fa-search"></i>
                         </span>
-                        <input type="text" id="search-input" class="form-control border-start-0 ps-0" placeholder="Search menu items...">
+                        <input type="text" id="search-input" class="form-control border-0 py-3 ps-0" placeholder="Find your craving...">
                     </div>
                 </div>
             </div>
             
             <!-- Filter Buttons -->
-            <div class="btn-container text-center mb-5">
+            <div class="btn-container text-center mb-5 d-flex flex-wrap justify-content-center gap-2">
                 <!-- Buttons will be added here by JS -->
             </div>
             
@@ -42,6 +56,10 @@
             </div>
         </div>
     </section>
+
+    <footer class="text-center py-4 text-muted border-top mt-5">
+        <p class="mb-0">&copy; 2026 Uniports Eats. All rights reserved.</p>
+    </footer>
 
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
